MAJ vers spring 4 + security + JWT + rate limiting