@@ -2,57 +2,55 @@ package com.ynov.adventures.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ynov.adventures.domain.Classe;
-import com.ynov.adventures.dto.AventurierCreateDTO;
-import com.ynov.adventures.dto.AventurierDTO;
-import com.ynov.adventures.dto.AventurierListResponseDTO;
-import com.ynov.adventures.dto.CaracteristiquesDTO;
+import com.ynov.adventures.dto.*;
 import com.ynov.adventures.exception.AventurierNotFoundException;
 import com.ynov.adventures.exception.GlobalExceptionHandler;
+import com.ynov.adventures.generated.model.*;
 import com.ynov.adventures.service.AventurierService;
+import com.ynov.adventures.service.MapperService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.time.OffsetDateTime;
+import java.util.List;
 import java.util.UUID;
 
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 class AventurierControllerTest {
+
     private MockMvc mockMvc;
-
     private AventurierService aventurierService;
-
+    private MapperService mapperService;
     private ObjectMapper objectMapper;
 
     private UUID testId;
     private AventurierDTO testAventurierDTO;
-    private AventurierCreateDTO testCreateDTO;
+
+    /** Modèle généré retourné par le mapper (ce que le controller sérialise). */
+    private Aventurier testGeneratedAventurier;
 
     @BeforeEach
     void setUp() {
         aventurierService = mock(AventurierService.class);
-        AventurierController aventurierController = new AventurierController(aventurierService);
-        LocalValidatorFactoryBean validator = new LocalValidatorFactoryBean();
-        validator.afterPropertiesSet();
-        mockMvc = MockMvcBuilders.standaloneSetup(aventurierController)
+        mapperService     = mock(MapperService.class);
+
+        AventurierController controller = new AventurierController(aventurierService, mapperService);
+
+        mockMvc = MockMvcBuilders.standaloneSetup(controller)
                 .setControllerAdvice(new GlobalExceptionHandler())
-                .setValidator(validator)
                 .build();
+
         objectMapper = new ObjectMapper();
+        objectMapper.findAndRegisterModules(); // support OffsetDateTime
 
         testId = UUID.randomUUID();
 
@@ -67,23 +65,40 @@ class AventurierControllerTest {
                 .updatedAt(LocalDateTime.now())
                 .build();
 
-        testCreateDTO = AventurierCreateDTO.builder()
+        testGeneratedAventurier = new Aventurier()
+                .id(testId)
                 .nom("Aragorn")
                 .description("Rôdeur des terres sauvages")
-                .caracteristiques(new CaracteristiquesDTO(15, 14, 16))
-                .classe(Classe.RODEUR)
-                .build();
+                .caracteristiques(new Caracteristiques().physique(15).mental(14).perception(16))
+                .niveau(1)
+                .classe(com.ynov.adventures.generated.model.Classe.RODEUR)
+                .createdAt(OffsetDateTime.now())
+                .updatedAt(OffsetDateTime.now());
     }
 
     @Test
     void testCreateAventurier_Success() throws Exception {
-        // Given
         when(aventurierService.createAventurier(any())).thenReturn(testAventurierDTO);
+        when(mapperService.fromGenerated(any(AventurierCreateInput.class))).thenReturn(
+                AventurierCreateDTO.builder()
+                        .nom("Aragorn")
+                        .caracteristiques(new CaracteristiquesDTO(15, 14, 16))
+                        .classe(Classe.RODEUR)
+                        .build()
+        );
+        when(mapperService.toGeneratedAventurier(testAventurierDTO)).thenReturn(testGeneratedAventurier);
 
-        // When & Then
+        String payload = """
+                {
+                  "nom": "Aragorn",
+                  "caracteristiques": { "physique": 15, "mental": 14, "perception": 16 },
+                  "classe": "Rodeur"
+                }
+                """;
+
         mockMvc.perform(post("/api/v1/aventuriers")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(testCreateDTO)))
+                        .content(payload))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id", is(testId.toString())))
                 .andExpect(jsonPath("$.nom", is("Aragorn")))
@@ -93,27 +108,11 @@ class AventurierControllerTest {
     }
 
     @Test
-    void testCreateAventurier_InvalidData() throws Exception {
-        // Given - Missing required fields
-        String invalidPayload = "{ \"nom\": \"A\" }"; // Name too short
-
-        // When & Then
-        mockMvc.perform(post("/api/v1/aventuriers")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(invalidPayload))
-                .andExpect(status().isBadRequest());
-
-        verify(aventurierService, times(0)).createAventurier(any());
-    }
-
-    @Test
     void testGetAventurierById_Success() throws Exception {
-        // Given
         when(aventurierService.getAventurierById(testId)).thenReturn(testAventurierDTO);
+        when(mapperService.toGeneratedAventurier(testAventurierDTO)).thenReturn(testGeneratedAventurier);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/aventuriers/{id}", testId)
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/v1/aventuriers/{id}", testId))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(testId.toString())))
                 .andExpect(jsonPath("$.nom", is("Aragorn")));
@@ -123,13 +122,10 @@ class AventurierControllerTest {
 
     @Test
     void testGetAventurierById_NotFound() throws Exception {
-        // Given
         when(aventurierService.getAventurierById(testId))
                 .thenThrow(new AventurierNotFoundException("Aventurier non trouvé"));
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/aventuriers/{id}", testId)
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/v1/aventuriers/{id}", testId))
                 .andExpect(status().isNotFound());
 
         verify(aventurierService, times(1)).getAventurierById(testId);
@@ -137,18 +133,19 @@ class AventurierControllerTest {
 
     @Test
     void testListAventuriers_Success() throws Exception {
-        // Given
-        AventurierListResponseDTO listResponse = AventurierListResponseDTO.builder()
-                .data(Arrays.asList(testAventurierDTO))
-                .pagination(null) // Would be set in real scenario
+        AventurierListResponseDTO listResponseDTO = AventurierListResponseDTO.builder()
+                .data(List.of(testAventurierDTO))
+                .pagination(PaginationDTO.builder().page(1).limit(20).total(1).totalPages(1).build())
                 .build();
 
-        when(aventurierService.listAventuriers(1, 20, null, null, null))
-                .thenReturn(listResponse);
+        AventurierListResponse generatedResponse = new AventurierListResponse()
+                .data(List.of(testGeneratedAventurier))
+                .pagination(new Pagination().page(1).limit(20).total(1).totalPages(1));
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/aventuriers")
-                        .contentType(MediaType.APPLICATION_JSON))
+        when(aventurierService.listAventuriers(1, 20, null, null, null)).thenReturn(listResponseDTO);
+        when(mapperService.toGeneratedListResponse(listResponseDTO)).thenReturn(generatedResponse);
+
+        mockMvc.perform(get("/api/v1/aventuriers"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data[0].nom", is("Aragorn")));
 
@@ -157,12 +154,9 @@ class AventurierControllerTest {
 
     @Test
     void testDeleteAventurier_Success() throws Exception {
-        // Given
         doNothing().when(aventurierService).deleteAventurier(testId);
 
-        // When & Then
-        mockMvc.perform(delete("/api/v1/aventuriers/{id}", testId)
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(delete("/api/v1/aventuriers/{id}", testId))
                 .andExpect(status().isNoContent());
 
         verify(aventurierService, times(1)).deleteAventurier(testId);
@@ -170,16 +164,12 @@ class AventurierControllerTest {
 
     @Test
     void testDeleteAventurier_NotFound() throws Exception {
-        // Given
         doThrow(new AventurierNotFoundException("Aventurier non trouvé"))
                 .when(aventurierService).deleteAventurier(testId);
 
-        // When & Then
-        mockMvc.perform(delete("/api/v1/aventuriers/{id}", testId)
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(delete("/api/v1/aventuriers/{id}", testId))
                 .andExpect(status().isNotFound());
 
         verify(aventurierService, times(1)).deleteAventurier(testId);
     }
-
 }
